--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="com.elninja.gotaxi"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="16"/>
+    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15"/>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
@@ -16,5 +16,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".GPSActivity"/>
+        <activity android:name=".MapPane"/>
     </application>
 </manifest>
